--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Workui by Vialerta</title>
+    <title>WorkUI by Vialerta</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Workui</h1>
-        <h2>Nosso Framework de Interfaces</h2>
+        <h1>WorkUI</h1>
+        <h2>Simple User Interface Framework</h2>
         <a href="https://github.com/Vialerta/workUI" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-workui" class="anchor" href="#welcome-to-workui" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to WorkUI.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
